[package]
name = "geolite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
csv = "1.1.6"
reqwest = "0.11.12"
thiserror = "1.0.37"
zip = "0.6.3"
serde = { version = "1.0.147", features = ["derive", "std"] }
rusqlite = "0.28.0"
serde_json = "1.0.87"
